--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,20 @@
 version: "3.9"
 
 services:
+
+  redis:
+    image: redis:7.2
+    container_name: redis
+    ports:
+      - "6379:6379"
+    restart: unless-stopped
   api-gateway:
     build: .
     container_name: api_gateway
     ports:
       - "8080:8080"
+    volumes:
+      - ./application.yml:/app/application.yml
+    depends_on:
+      - redis    
     restart: unless-stopped
